test/official_tests/field/get_on_function.lox
fun foo() {}

foo.bar; // error: {"line":3,"message":"Only class instances have properties","type":"RuntimeError"}
